lab2_ex9/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:20:08 **** Build of configuration Debug for project EX9 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:152:8: error: too many arguments to function 'updateCharA'
  152 |        updateCharA(counter_chA++, matrix);
      |        ^~~~~~~~~~~
In file included from ../Core/Src/main.c:26:
../Core/Inc/updateCharA.h:43:6: note: declared here
   43 | void updateCharA(int index)
      |      ^~~~~~~~~~~
../Core/Src/main.c:116:8: warning: unused variable 'counter_matrix' [-Wunused-variable]
  116 |    int counter_matrix = 0;
      |        ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
00:29:53 **** Incremental Build of configuration Debug for project EX9 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "EX9.elf" @"objects.list"   -mcpu=cortex-m3 -T"C:\mcu\lab2_ex9\EX9\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EX9.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EX9.elf
 
arm-none-eabi-size   EX9.elf 
arm-none-eabi-objdump -h -S  EX9.elf  > "EX9.list"
arm-none-eabi-objcopy  -O ihex  EX9.elf  "EX9.hex"
   text	   data	    bss	    dec	    hex	filename
   9196	     72	   1904	  11172	   2ba4	EX9.elf
arm-none-eabi-objcopy  -O binary  EX9.elf  "EX9.bin"
Finished building: default.size.stdout
 
Finished building: EX9.hex
 
Finished building: EX9.bin
 
Finished building: EX9.list
 
